--- a/mod.yml
+++ b/mod.yml
@@ -1,6 +1,6 @@
 title: KH2 Sora Ally(Over Goofy)
 originalAuthor: Omniツ
-description: Custom Sora Ally.
+description: Custom Sora Ally.Pnach explanation provided in server. https://discord.gg/YMV6Ea2
 assets:
  - name: obj/P_EX030.mdlx
    method: copy
